traversal.snake.Snake.scala.error
Compilation error:
Snake:7: error: type mismatch;
 found   : Unit
 required: Boolean
        droite()
              ^Snake:10: error: type mismatch;
 found   : Unit
 required: Boolean
        droite()
              ^Snake:17: error: type mismatch;
 found   : Unit
 required: Boolean
          gauche()
                ^Snake:20: error: type mismatch;
 found   : Unit
 required: Boolean
          gauche()
                ^Snake:32: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
                        ^Snake:32: error: type mismatch;
 found   : Unit
 required: Boolean
    if(estFaceMur==true){
    ^