traversal.snake.Snake.scala.code
override def run() {
  def murN:Boolean={
    if(getDirection()==Direction.EST){
      gauche()
      if(estFaceMur==true){
        return true
        droite()
      }else{
        return false
        droite()
      }
      
    }else if(getDirection()==Direction.OUEST){
        droite()
        if(estFaceMur==true){
        return true
          gauche()
              }else{
          return false
          gauche()
        }
      
    }else if(estFaceMur==true){
        return true
  }else{
      return false
    }
  }
  
  
  def fini:Boolean ={
    if(estFaceMur==true){
      
    }
  }
}